design build out

--- a/backend/api/global/models/global.settings.json
+++ b/backend/api/global/models/global.settings.json
@@ -46,7 +46,7 @@
     "HeaderMenu": {
       "type": "component",
       "repeatable": true,
-      "component": "sections.menu"
+      "component": "elements.menu"
     }
   }
 }
