--- a/backend/api/resources/models/resources.settings.json
+++ b/backend/api/resources/models/resources.settings.json
@@ -1,8 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "articles",
+  "collectionName": "resources",
   "info": {
-    "name": "article",
+    "name": "Resources",
     "description": ""
   },
   "options": {
@@ -13,37 +13,38 @@
   "pluginOptions": {},
   "attributes": {
     "title": {
-      "type": "string",
-      "required": true
-    },
-    "description": {
-      "type": "text",
-      "required": true
-    },
-    "content": {
-      "type": "richtext",
-      "required": true
+      "type": "string"
     },
     "slug": {
       "type": "uid",
-      "targetField": "title",
-      "required": true
+      "targetField": "title"
+    },
+    "content": {
+      "type": "richtext"
+    },
+    "download": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     },
     "image": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
-        "files",
         "images",
+        "files",
         "videos"
       ],
       "plugin": "upload",
-      "required": true,
+      "required": false,
       "pluginOptions": {}
-    },
-    "author": {
-      "via": "articles",
-      "model": "writer"
     }
   }
 }
