--- a/backend/api/contact/models/contact.settings.json
+++ b/backend/api/contact/models/contact.settings.json
@@ -21,6 +21,23 @@
     },
     "content": {
       "type": "richtext"
+    },
+    "bgImage": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
+    },
+    "seo": {
+      "type": "component",
+      "repeatable": false,
+      "component": "shared.seo"
     }
   }
 }
